feat: add footer

--- a/index.html
+++ b/index.html
@@ -12,5 +12,17 @@
     <title>CV Serebrennikova Irina | Web-designer | Junior Frontend Developer</title>
 </head>
 <body>
+    <div class="main-page">
+        <footer>
+            <p>&copy; Serebrennikova Irina, 2022</p>
+            <a href="https://rs.school/js/">
+                <img src="/RSSchool/CV/images/rs_school_icon.svg" alt="RSSchool" width="100px" height="40px">
+            </a>
+            <a class="my-github" href="https://github.com/irksova">
+                <img src="/RSSchool/CV/images/GitHub-Mark-Light-64px.png" alt="My Github" width="40px" height="40px">
+                <p>My Github</p>
+            </a>
+        </footer>
+    </div>
 </body>
 </html>
