feat: change links for icons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/RSSchool/CV/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -16,10 +16,10 @@
         <footer>
             <p>&copy; Serebrennikova Irina, 2022</p>
             <a href="https://rs.school/js/">
-                <img src="/RSSchool/CV/images/rs_school_icon.svg" alt="RSSchool" width="100px" height="40px">
+                <img src=./icons/rs_school_icon.svg" alt="RSSchool" width="100px" height="40px">
             </a>
             <a class="my-github" href="https://github.com/irksova">
-                <img src="/RSSchool/CV/images/GitHub-Mark-Light-64px.png" alt="My Github" width="40px" height="40px">
+                <img src="./icons/GitHub-Mark-Light-64px.png" alt="My Github" width="40px" height="40px">
                 <p>My Github</p>
             </a>
         </footer>
