feat: add main information

--- a/index.html
+++ b/index.html
@@ -12,17 +12,231 @@
     <title>CV Serebrennikova Irina | Web-designer | Junior Frontend Developer</title>
 </head>
 <body>
-    <div class="main-page">
+    <div class="container">
+        <main>
+            <div class="left-side">
+                <header>
+                    <img id="start" src="./images/personal-photo.jpeg" alt="Personal Photo">
+                    <h1>SEREBRENNIKOVA IRINA</h1>
+                    <p>Junior Front-End Developer
+                        <br>&amp; Web-designer</p>
+                </header>
+                <div class="info-left-side">
+                    <section class="contacts">
+                        <h2>Contacts</h2>
+                        <ul>
+                            <li class="img-vs-label">
+                                    <img src="./icons/Phone.svg" alt="Phone" width="20px" height="20px"">
+                                    <p>+7(999)534 04-14</p>
+                            </li>
+                            <li class="img-vs-label">
+                                <img src="./icons/Mail.svg" alt="Email" width="20px" height="20px"">
+                                <p>dancespenguin@gmail.com</p>
+                            </li>
+                            <li>
+                                <a class="img-vs-label" href="t-do.ru/irksova">
+                                    <img src="./icons/Telegram.svg" alt="Telegram" width="20px" height="20px"">
+                                    <p>irksova</p>
+                                </a>
+                            </li>
+                            <li><br></li>
+                            <li>
+                                <a class="img-vs-label" href="https://www.linkedin.com/in/irina-serebrennikova-80160a231/">
+                                    <img src="./icons/Linkedin.svg" alt="LinkedIn" width="20px" height="20px"">
+                                    <p>Irina Serebrennikova</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="img-vs-label" href="https://github.com/irksova">
+                                    <img src="./icons/Github.svg" alt="GitHub" width="21px" height="21px"">
+                                    <p>irksova</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="img-vs-label" href="https://www.instagram.com/irk.sova">
+                                    <img src="./icons/Instagram.svg" alt="Instagram" width="20px" height="20px"">
+                                    <p>irk.sova</p>
+                                </a>
+                            </li>
+                            <li>
+                                <p><b>Location:</b>&emsp;Russia, St.Petersburg <br><i class="comment">(ready to distant work)</i></p>
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="skills">
+                        <h2>Skills</h2>
+                        <ul>
+                            <li>
+                                <p> HTML, CSS &emsp; &#9733; &#9734; &#9734; &#9734; &#9734;</p>
+                                
+                            </li>
+                            <li> 
+                                <p> JavaScript &emsp; &#9734; &#9734; &#9734; &#9734; &#9734;</p>
+                            </li>
+                            <li></li>
+                            <li> 
+                                <p> Figma &emsp; &#9733; &#9733; &#9733; &#9733; &#9733;</p>
+                            </li>
+                            <li>
+                                <p> Tilda &emsp; &#9733; &#9733; &#9733; &#9733; &#9734; </p>
+                            </li>
+                            <li>
+                                <p> Adobe Photoshop &emsp; &#9733; &#9733; &#9733; &#9733; &#9734; </p>
+                            </li>
+                            <li>
+                                <p> Adobe Illustrator &emsp; &#9733; &#9733; &#9733; &#9734; &#9734; </p>
+                            </li>
+                            <li>
+                                <p> Adobe InDesign &emsp; &#9733; &#9733; &#9734; &#9734; &#9734; </p>
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="languages">
+                        <h2>Languages</h2>
+                        <ul>
+                            <li>
+                                <p><b>Russian</b> &#8212; Native</p>
+                            </li>
+                            <li> 
+                                <p><b>English</b> &#8212; Pre-Intermediate</p>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+            <div class="right-side">
+                <section class="about">
+                    <h2>About Myself</h2>
+                    <hr>
+                    <p>Hard worker with a good work-and-life balance. 
+                    </p>
+                </section>
+                <section class="work">
+                    <h2>Work Expirience</h2>
+                    <hr>
+                    <ul>
+                        <li>
+                            <h3>Senior Content Moderator</h3>
+                            <p>
+                                <b>VK (Mail.ru Group until 12 October 2021)</b>, St Petersburg City, Russia    
+                                <br><i>May, 2022 - Present</i> 
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Content Moderator</h3>
+                            <p>
+                                <b>VK (Mail.ru Group until 12 October 2021)</b>, St Petersburg City, Russia    
+                                <br><i>May, 2017 - May, 2022</i> 
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Web Designer</h3>
+                            <p>
+                                <b>Freelance</b>
+                                <br><i>2018 - Present</i> 
+                                <p>
+                                    <ul class="dotted-list">
+                                        <b>My Projects</b>
+                                        <li>
+                                            <a href="http://project4189434.tilda.ws/page23475406.html">Landing page on Tilda for translation agency</a>
+                                        </li>
+                                        <li>
+                                            <a href="http://project4189434.tilda.ws/page23488798.html">Web-business card for an HR-coach</a>
+                                        </li>
+                                        <li>
+                                            <a href="http://project4189434.tilda.ws/page23497704.html">Presentation design</a>
+                                        </li>
+                                        <li>
+                                            <a href="http://project4189434.tilda.ws/page23473226.html">Ujjayi pranayama breathing technique guide design</a>
+                                        </li>
+                                    </ul>
+                                </p>
+                            </p>
+                        </li>
+                    </ul>
+                </section>
+                <section class="education">
+                    <h2>Education &amp; Courses</h2>
+                    <hr>
+                    <ul>
+                        <li>
+                            <h3>Bachelor's degree</h3> 
+                            <p>
+                                <b>Tomsk State University of Control Systems and Radioelectronics</b>
+                                <p>Specialization: Information Systems and Technologies
+                                <br><i>Sep 2012 - Jun 2016; Russia, Tomsk</i></p>
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Master's degree</h3> 
+                            <p>
+                                <b>Saint Petersburg National Research University of Information Technologies, Mechanics and Optics (ITMO University)</b>
+                                <p>Specialization: Information Systems and Technologies 
+                                <br><i>Sep 2016 - Jun 2018; Russia, St.Petersburg</i></p>
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Courses:</h3>
+                            <p>
+                                <p> Intensive <b>&laquo;Profession Web Designer&raquo;</b> by Maxim Tarankov, 2018 </p>
+                                <p> Course <b>&laquo;Instalogy 2.0&raquo;</b> by Alexandra Mitroshina (<a href="https://instagram.com/alexandramitroshina">@alexandramitroshina</a>), 2020</p>
+                                <p> Course <b>&laquo;Managers&raquo;</b> by Polina Pushkareva (<a href="https://instagram.com/nioly">@nioly</a>), 2021</p>
+                                <p> Course <b>&laquo;Designers&raquo;</b> by Polina Pushkareva (<a href="https://instagram.com/nioly">@nioly</a>), 2021</p>
+                                <p> Course <b>&laquo;Designers PRO&raquo;</b> by Polina Pushkareva (<a href="https://instagram.com/nioly">@nioly</a>), 2021</p>
+                                <p> Course <b>&laquo;JavaScript/Front-end Stage0&raquo;</b> by <a href="https://rs.school/js/">RS School</a>, 2021 (in progress)</p>
+                            </p>
+
+                        </li>
+                    </ul>
+                </section>
+                <section class="code">
+                    <h2>Some Code Examples</h2>
+                    <hr>
+                    <ul>
+                        <li>
+                            <h3>Script for showing random block on Tilda</h3>
+                            <pre> 
+                                <code>
+$(document).ready(
+    function(){
+        $('#rec375605562, #rec376123622, #rec376123663, #rec376123687, 
+        #rec376123698,').addClass('chooseblk').hide();
+
+    function getRandomInt(max) { 
+        return Math.floor(Math.random() * Math.floor(max)); 
+    };
+
+    function showRandomBlock(){
+        let blkSts = getRandomInt($('.chooseblk').length);
+        $('.chooseblk').hide();
+        $('.chooseblk:eq('+blkSts+')').slideToggle(0); t_lazyload_update(); 
+    };
+
+    $("[href='#prediction']").click(function(e) {
+        e.preventDefault();
+        showRandomBlock()});
+});
+                                </code>
+                            </pre>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+        </main>
         <footer>
-            <p>&copy; Serebrennikova Irina, 2022</p>
+            <p>&copy; 2022, Serebrennikova Irina</p>
             <a href="https://rs.school/js/">
-                <img src=./icons/rs_school_icon.svg" alt="RSSchool" width="100px" height="40px">
+                <img src="./icons/rs_school_icon.svg" alt="RSSchool" width="100px" height="40px"">
             </a>
-            <a class="my-github" href="https://github.com/irksova">
-                <img src="./icons/GitHub-Mark-Light-64px.png" alt="My Github" width="40px" height="40px">
+            <a class="img-vs-label" href="https://github.com/irksova">
+                <img src="./icons/GitHub-Mark-Light-64px.png" alt="My Github" width="40px" height="40px"">
                 <p>My Github</p>
             </a>
+            <nav>
+                <a href="#start">Наверх</a>
+            </nav>
         </footer>
+
     </div>
 </body>
 </html>
