feat: delete errors from validator

--- a/index.html
+++ b/index.html
@@ -26,35 +26,35 @@
                         <h2>Contacts</h2>
                         <ul>
                             <li class="img-vs-label">
-                                    <img src="./icons/Phone.svg" alt="Phone" width="20px" height="20px"">
+                                    <img src="./icons/Phone.svg" alt="Phone" width="20px" height="20px">
                                     <p>+7(999)534 04-14</p>
                             </li>
                             <li class="img-vs-label">
-                                <img src="./icons/Mail.svg" alt="Email" width="20px" height="20px"">
+                                <img src="./icons/Mail.svg" alt="Email" width="20px" height="20px">
                                 <p>dancespenguin@gmail.com</p>
                             </li>
                             <li>
                                 <a class="img-vs-label" href="t-do.ru/irksova">
-                                    <img src="./icons/Telegram.svg" alt="Telegram" width="20px" height="20px"">
+                                    <img src="./icons/Telegram.svg" alt="Telegram" width="20px" height="20px">
                                     <p>irksova</p>
                                 </a>
                             </li>
                             <li><br></li>
                             <li>
                                 <a class="img-vs-label" href="https://www.linkedin.com/in/irina-serebrennikova-80160a231/">
-                                    <img src="./icons/Linkedin.svg" alt="LinkedIn" width="20px" height="20px"">
+                                    <img src="./icons/Linkedin.svg" alt="LinkedIn" width="20px" height="20px">
                                     <p>Irina Serebrennikova</p>
                                 </a>
                             </li>
                             <li>
                                 <a class="img-vs-label" href="https://github.com/irksova">
-                                    <img src="./icons/Github.svg" alt="GitHub" width="21px" height="21px"">
+                                    <img src="./icons/Github.svg" alt="GitHub" width="21px" height="21px">
                                     <p>irksova</p>
                                 </a>
                             </li>
                             <li>
                                 <a class="img-vs-label" href="https://www.instagram.com/irk.sova">
-                                    <img src="./icons/Instagram.svg" alt="Instagram" width="20px" height="20px"">
+                                    <img src="./icons/Instagram.svg" alt="Instagram" width="20px" height="20px">
                                     <p>irk.sova</p>
                                 </a>
                             </li>
