feat: correct code for validator

--- a/index.html
+++ b/index.html
@@ -163,16 +163,20 @@
                             <h3>Bachelor's degree</h3> 
                             <p>
                                 <b>Tomsk State University of Control Systems and Radioelectronics</b>
-                                <p>Specialization: Information Systems and Technologies
-                                <br><i>Sep 2012 - Jun 2016; Russia, Tomsk</i></p>
+                                <p>
+                                    Specialization: Information Systems and Technologies
+                                    <br><i>Sep 2012 - Jun 2016; Russia, Tomsk</i>
+                                </p>
                             </p>
                         </li>
                         <li>
                             <h3>Master's degree</h3> 
                             <p>
                                 <b>Saint Petersburg National Research University of Information Technologies, Mechanics and Optics (ITMO University)</b>
-                                <p>Specialization: Information Systems and Technologies 
-                                <br><i>Sep 2016 - Jun 2018; Russia, St.Petersburg</i></p>
+                                <p>
+                                    Specialization: Information Systems and Technologies 
+                                    <br><i>Sep 2016 - Jun 2018; Russia, St.Petersburg</i>
+                                </p>
                             </p>
                         </li>
                         <li>
@@ -226,10 +230,10 @@ $(document).ready(
         <footer>
             <p>&copy; 2022, Serebrennikova Irina</p>
             <a href="https://rs.school/js/">
-                <img src="./icons/rs_school_icon.svg" alt="RSSchool" width="100px" height="40px"">
+                <img src="./icons/rs_school_icon.svg" alt="RSSchool" width="100px" height="40px">
             </a>
             <a class="img-vs-label" href="https://github.com/irksova">
-                <img src="./icons/GitHub-Mark-Light-64px.png" alt="My Github" width="40px" height="40px"">
+                <img src="./icons/GitHub-Mark-Light-64px.png" alt="My Github" width="40px" height="40px">
                 <p>My Github</p>
             </a>
             <nav>
