--- a/index.html
+++ b/index.html
@@ -26,35 +26,35 @@
                         <h2>Contacts</h2>
                         <ul>
                             <li class="img-vs-label">
-                                    <img src="./icons/Phone.svg" alt="Phone" width="20px" height="20px">
+                                    <img src="./icons/Phone.svg" alt="Phone" width="20" height="20">
                                     <p>+7(999)534 04-14</p>
                             </li>
                             <li class="img-vs-label">
-                                <img src="./icons/Mail.svg" alt="Email" width="20px" height="20px">
+                                <img src="./icons/Mail.svg" alt="Email" width="20" height="20">
                                 <p>dancespenguin@gmail.com</p>
                             </li>
                             <li>
                                 <a class="img-vs-label" href="t-do.ru/irksova">
-                                    <img src="./icons/Telegram.svg" alt="Telegram" width="20px" height="20px">
+                                    <img src="./icons/Telegram.svg" alt="Telegram" width="20" height="20">
                                     <p>irksova</p>
                                 </a>
                             </li>
                             <li><br></li>
                             <li>
                                 <a class="img-vs-label" href="https://www.linkedin.com/in/irina-serebrennikova-80160a231/">
-                                    <img src="./icons/Linkedin.svg" alt="LinkedIn" width="20px" height="20px">
+                                    <img src="./icons/Linkedin.svg" alt="LinkedIn" width="20" height="20">
                                     <p>Irina Serebrennikova</p>
                                 </a>
                             </li>
                             <li>
                                 <a class="img-vs-label" href="https://github.com/irksova">
-                                    <img src="./icons/Github.svg" alt="GitHub" width="21px" height="21px">
+                                    <img src="./icons/Github.svg" alt="GitHub" width="21" height="21">
                                     <p>irksova</p>
                                 </a>
                             </li>
                             <li>
                                 <a class="img-vs-label" href="https://www.instagram.com/irk.sova">
-                                    <img src="./icons/Instagram.svg" alt="Instagram" width="20px" height="20px">
+                                    <img src="./icons/Instagram.svg" alt="Instagram" width="20" height="20">
                                     <p>irk.sova</p>
                                 </a>
                             </li>
@@ -230,10 +230,10 @@ $(document).ready(
         <footer>
             <p>&copy; 2022, Serebrennikova Irina</p>
             <a href="https://rs.school/js/">
-                <img src="./icons/rs_school_icon.svg" alt="RSSchool" width="100px" height="40px">
+                <img src="./icons/rs_school_icon.svg" alt="RSSchool" width="100" height="40">
             </a>
             <a class="img-vs-label" href="https://github.com/irksova">
-                <img src="./icons/GitHub-Mark-Light-64px.png" alt="My Github" width="40px" height="40px">
+                <img src="./icons/GitHub-Mark-Light-64px.png" alt="My Github" width="40" height="40">
                 <p>My Github</p>
             </a>
             <nav>
