--- a/index.html
+++ b/index.html
@@ -105,13 +105,47 @@
                 </div>
             </div>
             <div class="right-side">
-                <section class="about">
+                <section class="navigation-menu">
+                    <nav><a href="#about">About myself</a> | <a href="#work">Work Expirience</a> |
+                        <a href="#edu">Education & Courses</a> | <a href="#code">Code Examples & Frontend Projects</a></nav>
+                </section>
+                <section class="about"> 
+                    <a name="about"></a>
                     <h2>About Myself</h2>
                     <hr>
-                    <p>Hard worker with a good work-and-life balance. 
+                    <p>
+                        <p>
+                            I started my path in programming while studying at the university. Studied such programming languages as C++, C#, Java, HTML, CSS and others.
+                            <p>
+                                But in the magistracy I became interested in Web-design and since 2020 I have ended some courses and already have completed freelance projects.
+                            </p>
+                            <p>
+                                In 2022, I started my journey to Frontend. I think this will help me to be a better as Web-designer and may start my new profession as Frontend Developer.
+                            </p>
+                        </p>
+                        <p>
+                            This is CV - my first frontend project.
+                            But in the portfolio there are works on web design, design of information products, presentations.
+                        </p>
+                        <p>
+                            Personal qualities and skills:
+                            <ul class="dotted-list">
+                                <li> I can and love to learn and develop as a professional and as a person.</li>
+                                <li> Open to communication in teamwork.</li>
+                                <li> Obligatory, diligent and a bit of a perfectionist.</li>
+                                <li> Strive to optimize work processes.</li>
+                                <li> Adequately accept criticism.</li>
+                                <li> More than 5 years of remote work — time management and self-organization at its best.</li>
+                                <li> Hard worker with a good work-and-life balance.</li>
+                            </ul>    
+                        </p>
+                        <p>
+                        Thank you for your time, there is more specific information below.
+                        </p>
                     </p>
                 </section>
                 <section class="work">
+                    <a name="work"></a>
                     <h2>Work Expirience</h2>
                     <hr>
                     <ul>
@@ -130,7 +164,7 @@
                             </p>
                         </li>
                         <li>
-                            <h3>Web Designer</h3>
+                            <h3>Web-Designer</h3>
                             <p>
                                 <b>Freelance</b>
                                 <br><i>2018 - Present</i> 
@@ -156,6 +190,7 @@
                     </ul>
                 </section>
                 <section class="education">
+                    <a name="edu"></a>
                     <h2>Education &amp; Courses</h2>
                     <hr>
                     <ul>
@@ -182,23 +217,39 @@
                         <li>
                             <h3>Courses:</h3>
                             <p>
-                                <p> Intensive <b>&laquo;Profession Web Designer&raquo;</b> by Maxim Tarankov, 2018 </p>
-                                <p> Course <b>&laquo;Instalogy 2.0&raquo;</b> by Alexandra Mitroshina (<a href="https://instagram.com/alexandramitroshina">@alexandramitroshina</a>), 2020</p>
-                                <p> Course <b>&laquo;Managers&raquo;</b> by Polina Pushkareva (<a href="https://instagram.com/nioly">@nioly</a>), 2021</p>
-                                <p> Course <b>&laquo;Designers&raquo;</b> by Polina Pushkareva (<a href="https://instagram.com/nioly">@nioly</a>), 2021</p>
-                                <p> Course <b>&laquo;Designers PRO&raquo;</b> by Polina Pushkareva (<a href="https://instagram.com/nioly">@nioly</a>), 2021</p>
-                                <p> Course <b>&laquo;JavaScript/Front-end Stage0&raquo;</b> by <a href="https://rs.school/js/">RS School</a>, 2021 (in progress)</p>
+                                <ul class="dotted-list">
+                                    <li>
+                                        Intensive <b>&laquo;Profession Web Designer&raquo;</b> by Maxim Tarankov, 2018 
+                                    </li>
+                                    <li>
+                                        Course <b>&laquo;Instalogy 2.0&raquo;</b> by Alexandra Mitroshina (<a href="https://instagram.com/alexandramitroshina">@alexandramitroshina</a>), 2020
+                                    </li>
+                                    <li>
+                                        Course <b>&laquo;Managers&raquo;</b> by Polina Pushkareva (<a href="https://instagram.com/nioly">@nioly</a>), 2021
+                                    </li>
+                                    <li>
+                                        Course <b>&laquo;Designers&raquo;</b> by Polina Pushkareva (<a href="https://instagram.com/nioly">@nioly</a>), 2021 
+                                    </li>
+                                    <li>
+                                        Course <b>&laquo;Designers PRO&raquo;</b> by Polina Pushkareva (<a href="https://instagram.com/nioly">@nioly</a>), 2021
+                                    </li>
+                                    <li>
+                                        Course <b>&laquo;JavaScript/Front-end Stage0&raquo;</b> by <a href="https://rs.school/js/">RS School</a>, 2021 (in progress)
+                                    </li>
+                                </ul>
                             </p>
 
                         </li>
                     </ul>
                 </section>
                 <section class="code">
-                    <h2>Some Code Examples</h2>
+                    <a name="code"></a>
+                    <h2>Some Code Examples &amp; Frontend Projects </h2>
                     <hr>
                     <ul>
                         <li>
                             <h3>Script for showing random block on Tilda</h3>
+                            <div class="code-block" >
                             <pre> 
                                 <code>
 $(document).ready(
@@ -222,6 +273,15 @@ $(document).ready(
 });
                                 </code>
                             </pre>
+                        </div>
+                        </li>
+                        <li>
+                            <h3>Project for course «JavaScript/Front-end Stage0»</h3>
+                            <ul class="dotted-list">
+                                <li>
+                                    <a href="https://irksova.github.io/rsschool-cv/">CV page</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </section>
