feat: change nav

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="right-side">
-                <section class="navigation-menu">
+                <section>
                     <nav><a href="#about">About myself</a> | <a href="#work">Work Expirience</a> |
                         <a href="#edu">Education & Courses</a> | <a href="#code">Code Examples & Frontend Projects</a></nav>
                 </section>
